feat: masih kosong

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,37 @@
   --foreground: #171717;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: #3b82f6;
+  border-radius: 10px;
+}
+
+/* Swiper Navigation */
+.swiper-button-next,
+.swiper-button-prev {
+  color: #2563eb; /* biru */
+  font-weight: bold;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  color: #1e40af; /* biru tua saat hover */
+}
+
+/* Swiper Pagination */
+.swiper-pagination-bullet {
+  background: #6b7280; /* abu-abu */
+  opacity: 0.7;
+}
+
+.swiper-pagination-bullet-active {
+  background: #2563eb; /* biru aktif */
+  opacity: 1;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -19,8 +50,28 @@
   }
 }
 
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient {
+  animation: gradientMove 10s ease infinite;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
